refactored cart code added full width cart

--- a/src/test.html
+++ b/src/test.html
@@ -428,5 +428,7 @@
         </div>
     </div>
     </div>
+
+    <div class="card-body"><div class="row"><div class="col"><img src="https://www.meijer.com/content/dam/meijer/product/0033/38/3146/05/0033383146058_a1c1_1200.png" alt="Clementine Mandarins" style="width: 80px; height: 80px;"></div><div class="col"><div>5.00</div><div>Clementine Mandarins</div></div></div><div class="row"><div class="text-center col"><span><i class="fa fa-plus btn-icon"></i><span class="px-1 pb-1 border-bottom">1</span><i class="fa fa-minus btn-icon"></i></span><div class="small btn-remove">Remove</div></div></div></div>
   </body>
 </html>
